kubernetes/flask-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hejtado-quido-deployment
  labels:
    name: hejtado-quido
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hejtado-quido
    spec:
      containers:
      - name: hejtado-quido
        image: jas02/hejtado-quido:0.3.0
      restartPolicy: Always
