kubernetes/hejtado-quido-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: hejtado
  name: hejtado-quido-service
  labels:
    service: hejtado-quido
spec:
  selector:
    app: hejtado-quido
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
