kubernetes/flask-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hejtado-quido-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hejtado-quido.pine1.home
    http:
      paths:
      - path: /
        backend:
          serviceName: hejtado-quido-service
          servicePort: 80
