kubernetes/hejtado-quido-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hejtado
  name: hejtado-quido-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: hejtado-quido-service
                port:
                  number: 80
